# rwm

./: Cargo.toml  Makefile  README.md  rwm.toml
src/: bar.rs  cli.rs  client.rs  color.rs  config.rs  cursor.rs  geometry.rs  keybind.rs  layout.rs  lib.rs  main.rs  mgmt.rs  monitor.rs  platform.rs  prelude.rs  tag.rs  tagset.rs  update.rs  util.rs  window.rs
src/platform/: mod.rs  x11.rs
src/tiling/: fullscreen.rs
src/x11/: atom.rs  events.rs  init.rs  keyboard.rs  mod.rs  platform.rs
