[package]
name = "rwm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_constructors = "1.0.0"
derive_setters = "0.1.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.219", features = ["derive"] }
x11rb = { version = "0.13.1", optional = true, features = ["all-extensions"]}
dioxus-devtools = { git = "https://github.com/DioxusLabs/dioxus" }
bevy = { version = "0.16.1", default-features = false, features = ["bevy_state", "bevy_log"] }

[features]
default = ["x11"]
x11 = ["dep:x11rb"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
